Fix issues with content overflow

--- a/src/style.css
+++ b/src/style.css
@@ -9,17 +9,28 @@
   --header-height: 75px;
 }
 
-body,
-html {
-  position: relative;
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
   margin: 0;
   padding: 0;
   font-family: 'Ubuntu', sans-serif;
   color: var(--color-dark);
 }
 
-* {
-  box-sizing: border-box;
+body {
+  display: grid;
+  grid-template-areas:
+    'header header'
+    'sidebar main'
+    'footer main';
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: 75px 1fr 75px;
+  width: 100dvw;
+  height: 100dvh;
 }
 
 .add-task-form,
@@ -31,24 +42,12 @@ html {
   display: none;
 }
 
-main {
-  display: grid;
-  grid-template-columns: 300px 1fr;
-  position: relative;
-  height: min-content;
-  margin-top: var(--header-height);
-}
-
 /* ---HEADER--- */
 header {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-area: header;
   align-items: center;
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  width: 100%;
-  height: var(--header-height);
   background-color: var(--color-primary);
   user-select: none;
 }
@@ -58,6 +57,7 @@ header {
   margin-left: 3rem;
   padding: 0;
   font-size: 2rem;
+  font-weight: lighter;
   color: white;
 }
 
@@ -66,15 +66,18 @@ header {
 }
 
 .brand .accent {
+  font-weight: bold;
   color: var(--color-dark);
 }
 
 /* ---SIDEBAR--- */
 
 .sidebar {
-  height: calc(100vh - var(--header-height));
+  grid-area: sidebar;
   padding: 3rem 1.5rem;
   background-color: var(--color-sidebar);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .projects-container > h1 {
@@ -108,8 +111,11 @@ header {
 
 /* ---MAIN CONTENT--- */
 
-.main-content {
+main {
+  grid-area: main;
   padding: 5rem 4rem;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .task-container > h1 {
@@ -147,6 +153,12 @@ header {
 
 .task.active .task-details {
   display: block;
+}
+
+/* ---FOOTER--- */
+footer {
+  grid-area: footer;
+  background-color: var(--color-sidebar);
 }
 
 /* CHECKBOX STYLES */
